--- a/package.json
+++ b/package.json
@@ -1,42 +1,37 @@
 {
-  "name": "starter-react-app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "rarity-analyser",
+  "version": "0.0.0",
+  "description": "Rarity analyser for NFT metadata collection",
+  "main": "app.js",
+  "author": "Fukuball",
+  "license": "MIT",
   "scripts": {
-    "start": "node server.js",
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "start": "react-scripts start",
+    "start-dev": "NODE_ENV=development node-dev ./bin/www",
+    "postinstall": "node ./cmd/rarity_analyze.js && node ./cmd/rarity_analyze_normalized.js",
+    "rarity-analyze": "node ./cmd/rarity_analyze.js --mode=force && node ./cmd/rarity_analyze_normalized.js --mode=force",
+    "rarity-output-json": "node ./cmd/rarity_output_json.js"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "app-root-path": "^3.0.0",
+    "better-sqlite3": "^7.4.3",
+    "cookie-parser": "~1.4.4",
+    "debug": "^4.3.2",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "lodash": "^4.17.21",
+    "markdown-it": "^12.2.0",
+    "minimist": "^1.2.5",
+    "morgan": "~1.9.1",
+    "sync-request": "^6.1.0",
+    "web3": "^1.6.0"
+  },
+  "engines": {
+    "node": ">= 12.x <= 14.x"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "easy-livereload": "^1.4.3",
+    "node-dev": "^7.0.0"
   }
 }
